--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 venv
 __pycache__
-client_secret_668444080395-ddaf2ktt51r766eak5vcdchqb7uk7she.apps.googleusercontent.com.json
+YOUTUBE_CLIENT_SECRET_FILE
