Changed the client secret file for accessing google youtube api v3 to private.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 venv
 __pycache__
 YOUTUBE_CLIENT_SECRET_FILE
+client_secret_668444080395-ddaf2ktt51r766eak5vcdchqb7uk7she.apps.googleusercontent.com.json
